--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@material-ui/core": "^4.11.0",
     "@umijs/preset-react": "1.x",
     "@umijs/test": "^3.2.21",
+    "antd": "^4.7.3",
     "lib-flexible": "^0.3.2",
     "lint-staged": "^10.0.7",
     "mobx": "^5.15.7",
